ec2.tf
## EC2 Instance
  resource "aws_instance" "ec2-demo" {
      ami = "ami-0bb4c991fa89d4b9b"
      vpc_security_group_ids = [aws_security_group.sg-demo.id]
      instance_type = "t2.micro"
      key_name = "ec2-demo"
      subnet_id = aws_subnet.public_subnet1.id
      user_data = file("install.sh")
      tags = {
          Name = "Terraform Instance"
          env = "Dev"
      }
    
  }

output "public-ip" {
    value = aws_instance.ec2-demo.public_ip
  
}
